2001-08-20  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/autoconf.m4, lib/autoconf/oldnames.m4,
	* lib/autotest/general.m4: Adjust the license.

2001-08-17  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi (Function Portability): Mention snprintf,
	following up on a suggestion by Kevin Ryde.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* doc/install.texi, doc/autoconf.texi: Use `autoconf', not
	`autoconf_manual', as texinfo.tex 2001-06-21.10 chokes on it.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Refer to `$as_me.log', not
	`$0.log' as for projects where testsuite is in src, we'd have
	testsuite.log created in src.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in (&parse_args): Recognize --normalize.

2001-08-17  Akim Demaille  <akim@epita.fr>

	Start implementing the AC_CHECK_HEADER transition scheme.

	* lib/autoconf/headers.m4 (_AC_CHECK_HEADER_NEW)
	(_AC_CHECK_HEADER_OLD, _AC_CHECK_HEADER_MONGREL): New.
	(AC_CHECK_HEADER): Use them.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi: Work around Texinfo buglets.
	(Transformation Rules): One example is enough, users are expected
	to have their brains on. And BTW, use DESTDIR.
	(dvar): New macro.  Use it.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Writing testsuite.at) <AT_CHECK>: Complete.
	* lib/autotest/general.m4 (AT_INIT): Use the relative dir when
	looking for ChangeLogs.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* bin/autom4te.in: --normalize is a new option.
	* bin/autoconf.in: Use it.

2001-08-17  Akim Demaille  <akim@epita.fr>

	* bin/Makefile.am, lib/Autom4te/Makefile.am, lib/autoconf/Makefile.am
	* lib/autotest/Makefile.am, lib/m4sugar/Makefile.am: Add TAGS support.

2001-08-16  Paul Eggert  <eggert@twinsun.com>

	* doc/autoconf.texi, doc/install.texi: Put copyright notice at
	start, not at end.

2001-08-15  Akim Demaille  <akim@epita.fr>
